--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                 <div class="slide-content">
                     <h1 class="slide-title">YOUR SINGLE SOURCE FOR</h1>
                     <h2 class="slide-subtitle">THERMAL TRANSFER MEDIA<br>TAGS, LABELS & RIBBON</h2>
-                    <a href="{{ url_for('service_detail', service_id='thermal-transfer-tags') }}" class="btn btn-primary">LEARN MORE</a>
+                    <a href="{{ url_for('service_detail', category_slug='thermal-transfer', service_slug='thermal-tags') }}" class="btn btn-primary">LEARN MORE</a>
                 </div>
             </div>
         </div>
@@ -29,7 +29,7 @@
                 <div class="slide-content">
                     <h1 class="slide-title">COMPLETE</h1>
                     <h2 class="slide-subtitle">COMMERCIAL PRINTING</h2>
-                    <a href="{{ url_for('service_detail', service_id='commercial-printing') }}" class="btn btn-primary">LEARN MORE</a>
+                    <a href="{{ url_for('service_detail', category_slug='printing', service_slug='commercial-printing') }}" class="btn btn-primary">LEARN MORE</a>
                 </div>
             </div>
         </div>
